k8s/dev/admin-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-api
spec:
  selector:
    app: admin-api
  ports:
    - port: 8081
      targetPort: 8081
