k8s/dev/admin-api/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: admin-api-strip-ns-prefix
spec:
  stripPrefix:
    prefixes:
      - /${NS}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: admin-api
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/${NS}/admin/api`)
      kind: Rule
      priority: 100
      services:
        - name: admin-api
          port: 8081
      middlewares:
        - name: admin-api-strip-ns-prefix
